--- a/lib/appbar/theme.scss
+++ b/lib/appbar/theme.scss
@@ -1,7 +1,7 @@
 @import "../colors";
 @import "../globals";
 @import "../mixins";
- @import "./config";
+@import "./config";
 
 .appBar {
   display: flex;
@@ -34,5 +34,26 @@
 
   a {
     color: $appbar-contrast;
+  }
+
+  .title {
+    flex-grow: 1;
+    font-size: 1.8 * $unit;
+    font-weight: bold;
+    > small {
+      font-size: 1.8 * $unit;
+      font-weight: normal;
+    }
+  }
+
+  .leftIcon {
+    padding: 1.2 * $unit 1.2 * $unit 1.2 * $unit 0;
+    text-align: left;
+  }
+
+  .rightIcon {
+    padding: 1.2 * $unit 0 1.2 * $unit 1.2 * $unit;
+    margin-left: auto;
+    text-align: right;
   }
 }
